--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,16 @@ logging.level.org.springframework=INFO
 
 # Active Spring profiles
 spring.profiles.active=production
+
+# Spring boot metrics
+endpoints.metrics.enabled=true
+
+# 60 sec
+spring.datasource.hikari.connection-timeout=60000
+# max 5
+spring.datasource.hikari.maximum-pool-size=5
+
+metrics.host=local1
+metrics.prefix=${metrics.host}.pet-clinic
+metrics.graphite.host=localhost
+metrics.graphite.port=2003
