--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,17 @@
 mysql:
   image: mysql
   ports:
-    - "3306:3306"
+    - "3307:3306"
   environment:
     - MYSQL_ROOT_PASSWORD=root
     - MYSQL_DATABASE=test
   volumes:
     - "./conf.d:/etc/mysql/conf.d:ro"
+metrics:
+  image: dokkupaas/docker-grafana-graphite:latest
+  ports:
+    - "2003:2003"
+    - "8125:8125"
+    - "8126:8126"
+    - "10080:80"
+    - "10081:81"
