--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,7 +1,8 @@
 # database init, supports mysql too
 database=mysql
-spring.datasource.url=jdbc:mysql://localhost/test
+spring.datasource.url=jdbc:mysql://localhost:3307/test
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
  # Uncomment this the first time the app runs
-# spring.datasource.initialize=true
+spring.datasource.initialize=true
