Hystrix-Metrics und Test ergänzt

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<thymeleaf.version>3.0.2.RELEASE</thymeleaf.version>
 
 		<cobertura.version>2.7</cobertura.version>
+		<hystrix.version>1.5.12</hystrix.version>
 
 	</properties>
 
@@ -151,7 +152,44 @@
 			<artifactId>metrics-spring</artifactId>
 			<version>3.1.3</version>
 		</dependency>
+
+		<!-- Hystrix -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-hystrix</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.netflix.hystrix</groupId>
+			<artifactId>hystrix-codahale-metrics-publisher</artifactId>
+			<version>${hystrix.version}</version>
+		</dependency>
 	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Camden.SR5</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.netflix.hystrix</groupId>
+				<artifactId>hystrix-metrics-event-stream</artifactId>
+				<version>${hystrix.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.netflix.hystrix</groupId>
+				<artifactId>hystrix-core</artifactId>
+				<version>${hystrix.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.netflix.hystrix</groupId>
+				<artifactId>hystrix-javanica</artifactId>
+				<version>${hystrix.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<plugins>
